--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Sergeev_Lesson2</string>
-    <string name="button_name">ButtonEn</string>
+    <string name="english_button_name">English language</string>
+    <string name="russian_button_name">Russian language</string>
+    <string name="go_to_second_activity_button">Second activity</string>
+    <string name="default_text">Default text</string>
+    <string name="hint_et">Enter text</string>
 </resources>
