--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="contacts_btn_title">Contacts</string>
     <string name="vacancies">Vacancies</string>
     <string name="gallery">Gallery</string>
+    <string name="greeting">Приветствуем вас в Aston</string>
 </resources>
