add customView into land orientation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="vacancies">Vacancies</string>
     <string name="gallery">Gallery</string>
     <string name="greeting">Приветствуем вас в Aston</string>
+    <string name="title_text_example">Android trainee</string>
+    <string name="subtitle_text_example">Android Internship</string>
 </resources>
