--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="greeting">Приветствуем вас в Aston</string>
     <string name="title_text_example">Android trainee</string>
     <string name="subtitle_text_example">Android Internship</string>
+    <string name="home_title_bnb">Home</string>
+    <string name="vacancies_title_bnb">Vacancies</string>
+    <string name="offices_title_bnb">Offices</string>
 </resources>
