add offices fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,14 @@
     <string name="login_title_enter">Enter</string>
     <string name="login_btn_title">Enter</string>
     <string name="password_error_text">Wrong password</string>
+    <string name="flutter_title">Flutter Developer</string>
+    <string name="flutter_descr">Опыт работы с Flutter/Dart от 3-х лет</string>
+    <string name="fullstack_title">Full-Stack Developer</string>
+    <string name="fullstack_descr">Уверенное владение React, Java</string>
+    <string name="android_title">Android Developer</string>
+    <string name="android_descr">Опыт коммерческой разработки под Android от 3-х лет;</string>
+    <string name="ios_title">IOS Developer</string>
+    <string name="ios_descr">Опыт разработки под платформу iOS от 3-х лет;</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
