--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="android_descr">Опыт коммерческой разработки под Android от 3-х лет;</string>
     <string name="ios_title">IOS Developer</string>
     <string name="ios_descr">Опыт разработки под платформу iOS от 3-х лет;</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="toolbar_login_title">Login Screen</string>
+    <string name="toolbar_main_title">Main Screen</string>
+    <string name="toolbar_vacancies_title">Vacancies</string>
+    <string name="toolbar_offices_title">Offices</string>
 </resources>
